--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - 3.6
 
 install:
-  - pip install .
+  - pip install . --process-dependency-links
 
 script:
   - python setup.py test          
