Close long standing development branch (#23)
* typo in the header

* skeleton for xForecast routine

* typo in the header

* skeleton for xForecast routine

* getting xForecast requirements ready, like dW/dB

* getting ready for the second derivative of W

* fixing indentation

* typo in the header

* skeleton for xForecast routine

* getting xForecast requirements ready, like dW/dB

* getting ready for the second derivative of W

* fixing indentation

* W_dB uses SVD

* Merged

* Fixed retrieval of _logL_dB_svd

* W_dB_dB

* W_dBdB more readable and faster, untested

* first try for Cl_fgs

* Mixing Matrix file and W_dB test

* W_dBdB improved and loosely tested

* Mutipatch with derivatives and bug fix

* talk with Davide

* talk with Davide

* xF: tools for N_ell of the components and Cl of cmb

* WIP rebase on master

* dustbuster folder removed

* MixingMatrix has method for components' name

* Fixed mixing matrix initialization

* updated xF

* updated outputs of the code

* working xForecast

* xForecast dev ...

* sorry Davide

* xF doc improved

* xF cosmo likelihood fix

* minimize_kwargs passed to basic_comp_sep

* solve couple of bugs -- sigma(r) bounds, Cl_zY and yY computation, Cl_noise in cosmo likelihood

* removing hardcoded path

* changes in xF

* Test and multi_comp_sep improvements

* Bug fix in W_dBdB

* Bug fix. invN in xForecast

* tests and xF fixes

* WIP: refurbish xForecast

* WIP: bug fix in W_dB_maxL indexing

* Comp sep handles masks

* Masking makes more use of healpy routines

* comp_sep accepts fixed matrix, tests improved

* Components can have no free parameters

* Slice the component dimension of W_dBdB in xF

* Sigma fix

* Test on the dependence wrt nu0

* Planck 2018 Cl templates

* Template updated with r=1

* test for xForecast in fgbuster

* update pysm_helpers

* updating notebook for xForecast

* removing xF e

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,12 @@ python:
   - 3.6
 
 install:
-  - pip install .
-  - pip install -r requirements.txt
+  - pip install . --process-dependency-links
 
 script:
   - python setup.py test          
-#  travis-sphinx -n build
-#after_success: travis-sphinx deploy
+
+after_success: 
+    - pip install travis-sphinx nbsphinx sphinx_rtd_theme jupyter_client
+    - travis-sphinx build -n
+    - travis-sphinx deploy
