--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ scipy
 numpy
 sympy>=1.1.1
 six
-git+git://github.com/bthorne93/PySM_public.git#egg=pysm
+git+git://github.com/bthorne93/PySM_public.git@master#egg=pysm-2.1.0
 parameterized
