--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: python
 
 python:
-  - 2.7
   - 3.6
+  - 3.7
 
 install:
-  - pip install . --process-dependency-links
+  - pip install .
+    - pip install travis-sphinx nbsphinx sphinx_rtd_theme jupyter_client
 
 script:
   - python setup.py test          
+    - travis-sphinx build -n
 
 after_success: 
-    - pip install travis-sphinx nbsphinx sphinx_rtd_theme jupyter_client
-    - travis-sphinx build -n
-    - travis-sphinx deploy
+    - travis-sphinx deploy -b multi_resolution
