--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ sphinx
 numdifftools
 travis-sphinx
 healpy
-scipy
+scipy==1.2
 numpy
 sympy>=1.1.1
 six
-git+git://github.com/bthorne93/PySM_public.git#egg=pysm
+git+git://github.com/bthorne93/PySM_public.git@master#egg=pysm-2.1.0
 parameterized
