--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ script:
 after_success: 
   - sudo apt-get -qq update
   - sudo apt-get install -y pandoc
-  - pip install travis-sphinx nbsphinx sphinx_rtd_theme jupyter_client ipykernel
+  - pip install sphinx<3 travis-sphinx nbsphinx sphinx_rtd_theme jupyter_client ipykernel
   - travis-sphinx build -n
   - travis-sphinx deploy
