First phase done

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,13 @@ ENV/
 
 # pylint
 pylintrc
+
+# vscode 
+.vscode/*
+# Local History for Visual Studio Code
+.history/
+# Built Visual Studio Code Extensions
+*.vsix
+#vim
+*.swp
+*.vim
