fix incompatibility with sympy>=1.12.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     'pysm3',
     'scipy',
     'six',
-    'sympy==1.11',
+    'sympy',
     'tqdm',
 ]
 requires-python = '>=3.10'
