Relieve sympy version constraint (#54)
* fix incompatibility with sympy>=1.12.0

* fixed compatibility with pandas > 2.2

* enable some pyupgrade rules

---------

Co-authored-by: Arianna Rizzieri <arianna.rizzieri@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     'pysm3',
     'scipy',
     'six',
-    'sympy==1.11',
+    'sympy',
     'tqdm',
 ]
 requires-python = '>=3.10'
@@ -54,4 +54,8 @@ line-length = 100
 [tool.ruff.lint]
 select = [
     'NPY201',
+    'UP',
+]
+ignore = [
+    'UP031',  # percent format
 ]
