Require NumPy 2 with python>=3.13

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     'corner',
     'healpy',
     'numdifftools',
-    'numpy>=1.26.4',
+    'numpy>=1.26.4; python_version < "3.13"',
+    'numpy>=2.0; python_version >= "3.13"',
     'pandas',
     'parameterized',
     'pysm3',
